Refactor dropdown popover open state handling
Simplifies the logic for setting and checking the dropdown popover's open state by only using the presence of the data-open attribute. Also removes the unused @floating-ui--dom.js vendor file.

--- a/app/components/dropdown_popover_component.html.erb
+++ b/app/components/dropdown_popover_component.html.erb
@@ -22,7 +22,7 @@
     style="position: fixed; margin: 0;"
     data-dropdown-popover-target="menu"
     data-action="click@document->dropdown-popover#closeOnClickOutside"
-    data-open="<%= open %>"
+    <%= "data-open=\"true\"" if open %>
     role="dialog"
     aria-modal="false"
   >
