Add user profile show page and controller
Introduces UsersController with a show action, corresponding route, and view to display the current user's profile. Refactors user info partial to accept a user argument and updates navbar to pass current_user. Adds tests for authentication and show action. Also adds a name method to the User model for display purposes.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -89,7 +89,7 @@
           max-h-[80dvh] overflow-y-auto
         "
       >
-        <%= render "shared/user_info" %>
+        <%= render "shared/user_info", user: current_user %>
 
         <%# User links menu %>
         <ul class="menu menu-xl p-2"><%= render "shared/user_links" %></ul>
