forbid zooming on mobile devices

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,6 +1,6 @@
 <title><%= formatted_title %></title>
 
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<%= viewport_meta_tag %>
 
 <meta name="apple-mobile-web-app-capable" content="yes">
 
