--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
 <%= modal close_on_submit: false, dialog_position: "modal-middle", title: t("search.index.title") do %>
   <div class="flex flex-col gap-4">
-    <%= simple_form_for :search, url: search_path, method: :get, html: { data: { turbo_frame: :results, controller: "debounce" } } do |form| %>
+    <%= simple_form_for :search, url: search_path, method: :get, html: { data: { turbo_frame: :global_search_results, controller: "debounce" } } do |form| %>
       <%= form.input :query,
                       placeholder: t("search.index.title"),
                       label: false,
@@ -12,7 +12,7 @@
                       } %>
     <% end %>
 
-    <%= turbo_frame_tag :results do %>
+    <%= turbo_frame_tag :global_search_results do %>
       <% if @organizations.present? %>
         <%= render PageComponent.new(title: "Organizations") do %>
           <%= render "organizations/table", organizations: @organizations %>
