menu-xl only on expanded menu

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -7,7 +7,7 @@
       [[data-expanded=true]_&]:w-80
     "
   >
-    <ul class="menu menu-xl w-full flex-1">
+    <ul class="menu [[data-expanded=true]_&]:menu-xl w-full flex-1">
       <%= nav_link Rails.application.config_for(:settings).dig(:site, :name), root_path, class: "text-2xl font-medium", icon: "logo.png", active: :exact %>
 
       <li></li>
