simple_form autogrow

--- a/app/views/organizations/projects/_form.html.erb
+++ b/app/views/organizations/projects/_form.html.erb
@@ -17,6 +17,8 @@
                  label: "Description",
                  character_counter: true,
                  character_counter_limit: 100,
+                 autogrow: true,
+                 autogrow_max_height: 10,
                  hint: "Textarea for multi-line text input.",
                  input_html: { rows: 4 } %>
 
