add signature to mailers and default from

--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -1,1 +1,4 @@
 <%= yield %>
+--<%= Rails.application.config_for(:settings).dig(:site, :name) %>
+<%= Rails.application.config_for(:settings).dig(:site, :email) %>
+<%= Rails.application.config_for(:settings).dig(:site, :address) %>
