--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -9,5 +9,20 @@
     </style>
   </head>
 
-  <body><%= yield %></body>
+  <body>
+    <%= yield %>
+
+    <hr style="border: none; border-top: 1px solid #e5e7eb; margin: 2rem 0;">
+
+    <p style="color: #6b7280; font-size: 0.875rem; line-height: 1.5;">
+      <strong>
+        <%= Rails.application.config_for(:settings).dig(:site, :name) %>
+      </strong>
+
+      <br>
+      <%= Rails.application.config_for(:settings).dig(:site, :email) %>
+      <br>
+      <%= Rails.application.config_for(:settings).dig(:site, :address) %>
+    </p>
+  </body>
 </html>
