--- a/app/views/membership_mailer/invitation_email.text.erb
+++ b/app/views/membership_mailer/invitation_email.text.erb
@@ -1,1 +1,1 @@
-<%= t("membership_mailer.invitation_email.body", organization_name: @organization.name, url: new_user_session_url) %>
+<%= t("membership_mailer.invitation_email.body", organization_name: @organization.name, url: @action_url) %>
