--- a/app/views/users/invitation_acceptances/show.html.erb
+++ b/app/views/users/invitation_acceptances/show.html.erb
@@ -1,5 +1,5 @@
 <%= render PageComponent.new(title: t(".title"), full_width: false) do %>
-  <%= simple_form_for @user, url: accept_user_invitation_path(invitation_token: params[:invitation_token]), method: :patch, html: { class: "space-y-4" } do |f| %>
+  <%= simple_form_for @user, url: accept_user_invitation_update_path, method: :patch, html: { class: "space-y-4" } do |f| %>
     <%= render "shared/errors", object: @user %>
 
     <%= f.input :email,
