--- a/app/views/membership_mailer/invitation_email.text.erb
+++ b/app/views/membership_mailer/invitation_email.text.erb
@@ -1,1 +1,1 @@
-<%= @message %> View your invitations: <%= @action_url %>
+<%= t("membership_mailer.invitation_email.body", organization_name: @organization.name, url: @action_url) %>
