--- a/app/views/organizations/_membership_actions.html.erb
+++ b/app/views/organizations/_membership_actions.html.erb
@@ -6,11 +6,11 @@
       <%= link_to t("public.organizations.show.actions.open"), organization_path(organization), class: "btn btn-sm btn-primary", data: { turbo_frame: "_top" } %>
     <% end %>
   <% elsif organization.user_requests.pending.exists?(user: current_user) %>
-    <%= button_to t("public.organizations.show.actions.cancel_request"), user_membership_request_path(organization.user_requests.pending.find_by(user: current_user)), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "btn btn-sm btn-error" %>
+    <%= button_to t("public.organizations.show.actions.cancel_request"), user_organizations_membership_request_path(organization.user_requests.pending.find_by(user: current_user)), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "btn btn-sm btn-error" %>
   <% elsif organization.user_invitations.pending.exists?(user: current_user) %>
-    <%= button_to t("public.organizations.show.actions.accept_invitation"), approve_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "btn btn-sm btn-primary" %>
-    <%= button_to t("public.organizations.show.actions.reject_invitation"), reject_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "btn btn-sm btn-error" %>
+    <%= button_to t("public.organizations.show.actions.accept_invitation"), approve_user_organizations_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :patch, class: "btn btn-sm btn-primary" %>
+    <%= button_to t("public.organizations.show.actions.reject_invitation"), reject_user_organizations_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :patch, class: "btn btn-sm btn-error" %>
   <% else %>
-    <%= button_to t("public.organizations.show.actions.#{organization.privacy_setting_public? ? 'join' : 'request_to_join'}"), user_membership_requests_path(organization_id: organization.id), method: :post, class: "btn btn-sm btn-primary" %>
+    <%= button_to t("public.organizations.show.actions.#{organization.privacy_setting_public? ? 'join' : 'request_to_join'}"), user_organizations_membership_requests_path(organization_id: organization.id), method: :post, class: "btn btn-sm btn-primary" %>
   <% end %>
 </div>
