improve membership_mailer.invitation_email

--- a/app/views/membership_mailer/invitation_email.text.erb
+++ b/app/views/membership_mailer/invitation_email.text.erb
@@ -1,1 +1,1 @@
-<%= t("membership_mailer.invitation_email.body", organization_name: @organization.name, url: @action_url) %>
+<%= t("membership_mailer.invitation_email.body", invitor_email: @recipient.invited_by&.email || t("membership_mailer.invitation_email.someone"), organization_name: @organization.name, url: @action_url) %>
