simple_form - wrap long hints

--- a/app/views/organizations/projects/_form.html.erb
+++ b/app/views/organizations/projects/_form.html.erb
@@ -87,10 +87,8 @@
                           autonumeric_currency_value: "$"
                         } %>
 
-    <div class="label">
-      <span class="label-text-alt">
-        Text field with autonumeric formatting (form.text_field example)
-      </span>
+    <div class="text-base-content/70 text-xs mt-1 whitespace-normal break-words w-full">
+      Text field with autonumeric formatting (form.text_field example)
     </div>
   </div>
 
