--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,4 +1,17 @@
 @import 'tailwindcss';
+
+@custom-variant hotwire-native {
+  html[data-hotwire-native] & {
+    @slot;
+  }
+}
+
+@custom-variant non-hotwire-native {
+  html:not([data-hotwire-native]) & {
+    @slot;
+  }
+}
+
 @source "../../../public/*.html";
 @source "../../../app/helpers/**/*.rb";
 @source "../../../app/javascript/**/*.js";
