--- a/app/components/tabs_component.html.erb
+++ b/app/components/tabs_component.html.erb
@@ -9,7 +9,7 @@
   <nav class="flex space-x-4">
     <% tabs.each do |tab| %>
       <% if tab[:condition].nil? || tab[:condition] %>
-        <%= link_to tab[:path], class: tab_classes(tab[:key]) do %>
+        <%= link_to tab[:path], class: tab_classes(tab[:key]), **tab_html_options(tab) do %>
           <% if tab[:content] %>
             <%= tab[:content] %>
           <% else %>
@@ -24,9 +24,7 @@
             <% end %>
             <%= tab[:label] %>
             <% if tab[:badge_count] && tab[:badge_count] > 0 %>
-              <span class="badge badge-sm badge-warning">
-                <%= tab[:badge_count] %>
-              </span>
+              <span class="badge badge-sm badge-warning"><%= tab[:badge_count] %></span>
             <% end %>
           <% end %>
         <% end %>
