--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" class="h-full bg-base-100 text-base-content">
+<html lang="en" class="h-full bg-base-100 text-base-content" <%= platform_identifier %>>
   <head><%= render "layouts/head" %></head>
 
   <body class="h-dvh overflow-hidden">
@@ -26,10 +26,14 @@
         </div>
 
         <main class="flex-grow p-4 min-w-0 overflow-x-hidden">
+          <div class="hotwire-native:bg-rose-400 bg-green-400">
+            hello
+          </div>
+
           <%= yield %>
         </main>
 
-        <%= render "shared/footer_nav" %>
+        <%= render "shared/footer_nav" unless hotwire_native_app? %>
       </div>
 
       <%= render "shared/sidebar" %>
