menu button in the root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html lang="en" class="h-full bg-base-100 text-base-content" <%= platform_identifier %>>
   <head><%= render "layouts/head" %></head>
 
-  <body class="h-dvh overflow-hidden">
+  <body class="h-dvh overflow-hidden" data-controller="bridge--menu-button">
     <div class="drawer lg:drawer-open">
       <input id="main-drawer" type="checkbox" class="drawer-toggle">
 
