hide navbar on turbo native

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="px-4 navbar flex justify-between">
+<nav class="px-4 navbar flex justify-between hotwire-native:hidden">
   <%# left %>
   <div class="flex items-center gap-2">
     <%# mobile sidebar toggle %>
