--- a/app/views/shared/_user_links.html.erb
+++ b/app/views/shared/_user_links.html.erb
@@ -1,3 +1,15 @@
+<% new_or_edit = action_name == "new" || action_name == "edit" %>
+
+<% if hotwire_native_app? && !new_or_edit %>
+  <%= tag.div data: { controller: 'bridge--nav', bridge_side: 'right', bridge_image: 'person.circle' } do %>
+    <%= link_to t("shared.navigation.organizations"), organizations_path, data: { bridge__nav_target: 'item', bridge_image: 'folder' } %>
+    <%= link_to t("users.referrals.index.title"), user_referrals_path, data: { bridge__nav_target: 'item', bridge_image: 'gift.circle' } %>
+    <%= link_to t("users.connected_accounts.index.title"), user_connected_accounts_path, data: { bridge__nav_target: 'item', bridge_image: 'link.circle' } if Rails.application.config.omniauth_providers.any? %>
+    <%= link_to t("shared.navigation.edit_profile"), edit_user_registration_path, data: { bridge__nav_target: 'item', bridge_image: 'pencil.circle' } %>
+    <%= link_to t("shared.navigation.logout"), destroy_user_session_path, data: { turbo_method: :delete, bridge__nav_target: 'item', bridge_image: 'power.circle', controller: 'bridge--sign-out', bridge__sign_out_path_value: hotwire_native_v1_auth_path, action: 'bridge--sign-out#signOut', turbo_confirm: t("shared.actions.confirm") } %>
+  <% end %>
+<% end %>
+
 <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [["organizations", "public/organizations", "users/invitations", "users/membership_requests"], ["index"]] %>
 
 <%= nav_link t("users.referrals.index.title"), user_referrals_path, icon: "🎁", badge: "New" %>
