--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,6 +1,8 @@
 <%= render PageComponent.new(title: t("devise.views.unlocks.new.title"), full_width: false) do %>
   <%= render "devise/shared/oauth_links" %>
 
+  <div class="divider"><%= t("devise.views.shared.links.oauth_separator") %></div>
+
   <%= simple_form_for resource, as: resource_name, url: unlock_path(resource_name), method: :post, html: { class: "space-y-4" } do |f| %>
     <%= render "shared/errors", object: resource %>
 
@@ -13,9 +15,7 @@
                    autocomplete: "email"
                  } %>
 
-    <div class="pt-2">
-      <%= f.button :submit, t("devise.views.unlocks.new.submit"), class: "btn-primary btn-block" %>
-    </div>
+    <div class="pt-2"><%= f.button :submit, t("devise.views.unlocks.new.submit"), class: "btn-primary btn-block" %></div>
   <% end %>
 
   <%= render "devise/shared/links" %>
