--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
   <%= render template: "layouts/application" %>
 <% else %>
-  <%= render template: "layouts/static" %>
+  <%= render template: "layouts/centered" %>
 <% end %>
