--- a/app/views/shared/_unauthenticated_navbar.html.erb
+++ b/app/views/shared/_unauthenticated_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="flex justify-between px-6 py-2 bg-base-100 shadow-sm">
+<nav class="flex justify-between px-6 py-2 bg-base-100">
   <%# left %>
   <div class="flex items-center gap-2">
     <div>
