--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,9 +2,7 @@
   <%# left %>
   <div class="flex items-center gap-2">
     <%# mobile sidebar toggle %>
-    <label for="main-drawer" class="btn btn-ghost btn-square lg:hidden">
-      <%= inline_svg_tag "svg/bars-3.svg", class: "size-6" %>
-    </label>
+    <label for="main-drawer" class="btn btn-ghost btn-square lg:hidden"><%= inline_svg_tag "svg/bars-3.svg", class: "size-6" %></label>
 
     <%# select org dropdown %>
     <% if Current.organization %>
@@ -31,21 +29,6 @@
         </ul>
       </div>
     <% end %>
-
-    <%# search %>
-    <%# if Flipper.enabled?(:search, current_user) %>
-    <%# if Flipper[:search].enabled?(current_user) %>
-    <%# if Flipper[:search].enabled? %>
-    <% unless current_page?(search_path) %>
-      <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "max-lg:hidden input input-sm gap-1 cursor-pointer rounded-lg" do %>
-        <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-4 w-4 h-4" %>
-        <span class="grow hidden lg:block"><%= t("search.index.title") %></span>
-        <kbd class="kbd kbd-xs hidden lg:inline-flex">⌘</kbd>
-        <kbd class="kbd kbd-xs hidden lg:inline-flex">K</kbd>
-      <% end %>
-    <% end %>
-
-    <%# end %>
   </div>
 
   <%# right %>
@@ -68,18 +51,14 @@
           border border-base-content/20
         "
       >
-        <div class="w-full flex justify-end">
-          <%= link_to "View all", user_notifications_path, class: "link link-hover" %>
-        </div>
+        <div class="w-full flex justify-end"><%= link_to "View all", user_notifications_path, class: "link link-hover" %></div>
 
         <%= turbo_frame_tag :notifications, src: user_notifications_path, loading: :lazy %>
       </div>
     </div>
 
     <div class="dropdown dropdown-end group">
-      <div tabindex="0" role="button" class="cursor-pointer">
-        <%= user_avatar(current_user) %>
-      </div>
+      <div tabindex="0" role="button" class="cursor-pointer"><%= user_avatar(current_user) %></div>
 
       <div
         tabindex="-1"
@@ -99,7 +78,5 @@
 </nav>
 
 <% if Current.organization %>
-  <div class="lg:hidden">
-    <%= render TabsComponent.new(active_tab: organization_active_tab, tabs: organization_tabs) %>
-  </div>
+  <div class="lg:hidden"><%= render TabsComponent.new(active_tab: organization_active_tab, tabs: organization_tabs) %></div>
 <% end %>
