--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -36,11 +36,18 @@
 
       <%# mobile - sidebar for switching between organizations %>
       <div class="<% if Current.organization %> lg:hidden <% end %>">
-        <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/compass.svg", active: :exact %>
+        <li>
+          <%= active_link_to organizations_path, class_active: "menu-active", class: "flex justify-between items-center whitespace-nowrap justify-start min-w-0", title: t("shared.navigation.organizations"), active: :exact do %>
+            <%= inline_svg_tag "svg/compass.svg", class: "size-6 w-6 h-6" %>
+            <span class="[[data-expanded=false]_&]:hidden truncate min-w-0"><%= t("shared.navigation.organizations") %></span>
+          <% end %>
 
-        <% Current.organizations&.each do |organization| %>
-          <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6") %>
-        <% end %>
+          <ul>
+            <% Current.organizations&.each do |organization| %>
+              <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6") %>
+            <% end %>
+          </ul>
+        </li>
       </div>
     </ul>
 
