--- a/app/views/organizations/memberships/_tabs.html.erb
+++ b/app/views/organizations/memberships/_tabs.html.erb
@@ -7,23 +7,23 @@
      },
      {
        key: :invitations,
-       path: organization_invitations_path(@organization),
-       label: t("organizations.invitations.index.title"),
-       badge_count: @organization.user_invitations.pending.count,
+       path: organization_sent_invitations_path(@organization),
+       label: t("organizations.sent_invitations.index.title"),
+       badge_count: @organization.sent_invitations.pending.count,
        condition: policy(Membership).create?
      },
      {
        key: :requests,
-       path: organization_membership_requests_path(@organization),
-       label: t("membership_requests.index.title"),
-       badge_count: @organization.user_requests.pending.count,
+       path: organization_received_join_requests_path(@organization),
+       label: t("join_requests.index.title"),
+       badge_count: @organization.received_join_requests.pending.count,
        condition: policy(Membership).create? && @organization.privacy_setting_restricted?
      }
    ] %>
 
 <%= render PageComponent.new(title: t("organizations.memberships.index.title")) do |component| %>
   <% component.with_action_list do %>
-    <%= link_to t("organizations.memberships.new.title"), new_organization_invitation_path(@organization), data: { turbo_frame: :modal }, class: "btn btn-primary" if policy(@organization.memberships.new).new? %>
+    <%= link_to t("organizations.memberships.new.title"), new_organization_sent_invitation_path(@organization), data: { turbo_frame: :modal }, class: "btn btn-primary" if policy(@organization.memberships.new).new? %>
   <% end %>
 
   <%= render TabsComponent.new(active_tab: active_tab, tabs:) %>
