--- a/app/views/users/invitation_acceptances/new.html.erb
+++ b/app/views/users/invitation_acceptances/new.html.erb
@@ -25,8 +25,6 @@
                    autocomplete: "new-password"
                  } %>
 
-    <div class="pt-2">
-      <%= f.button :submit, t(".submit"), class: "btn-primary btn-block" %>
-    </div>
+    <div class="pt-2"><%= f.button :submit, t(".submit"), class: "btn-primary btn-block" %></div>
   <% end %>
 <% end %>
